--- a/p1.css
+++ b/p1.css
@@ -1,8 +1,29 @@
-.quote {
+#quote {
 	font-size: 1.5em;
 	color:red;
 }
 
 h2 {
 	color:blue;
+}
+
+img {
+  display: block;
+  max-width:500px;
+  max-height:500px;
+  width: auto;
+  height: auto;
+}
+
+#wrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
+
+p {
+	font-size: 1.5em;
+	width:50%;
 }
